--- a/lefthook.yml
+++ b/lefthook.yml
@@ -29,8 +29,9 @@ pre-commit:
 pre-push:
   parallel: false
   commands:
-    test-all:
-      run: |
-        echo "Running all tests..."
-        cd api && npm test
-        cd ../web && npm test
+    test-api:
+      root: api/
+      run: npm test
+    test-web:
+      root: web/
+      run: npm test
