--- a/lefthook.yml
+++ b/lefthook.yml
@@ -31,7 +31,7 @@ pre-push:
   commands:
     test-api:
       root: api/
-      run: npm test
+      run: npx vitest run
     test-web:
       root: web/
-      run: npm test
+      run: npx vitest run
