--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.1",
+    "@modelcontextprotocol/sdk": "^1.17.4",
     "hono": "^4.9.5"
   }
 }
